# HelperLibrary

./: .gitignore
src/HelperLibrary/: CMakeLists.txt  DomElementWrapper.cpp  DomElementWrapper.h  Randomizer.cpp  Randomizer.h  SimpleTextFilter.cpp  SimpleTextFilter.h  another.cpp  anymacro.h  buildversion.cpp  buildversion.h  cistring.cpp  cistring.h  cmdargs.cpp  cmdargs.h  converterfunctions.cpp  converterfunctions.h  eventlistener.cpp  eventlistener.h  export.h  functions.cpp  functions.h  helperscontainter.h  igadget.h  iobject.cpp  iobject.h  ivariant.cpp  ivariant.h  leakchecker.cpp  leakchecker.h  metatypehelper.cpp  metatypehelper.h  objectfactory.cpp  objectfactory.h  programlauncher.cpp  programlauncher.h  project_pch.h  qtserviceinstall.pri  releaseassert.h  scopetimer.cpp  (+9 more)
src/HelperLibrary/Decorator/: basedecorator.cpp  basedecorator.h
src/HelperLibrary/Events/: settingchangeevent.cpp  settingchangeevent.h
src/HelperLibrary/Exceptions/: StackWalker.cpp  StackWalker.h  customstackwalker.cpp  customstackwalker.h  userexception.cpp  userexception.h
src/HelperLibrary/ExtendApp/: AppLocker.cpp  AppLocker.h  appconfig.cpp  appconfig.h  appsettings.cpp  appsettings.h  extendapp.cpp  extendapp.h  singleapplicationprivate.cpp  singleapplicationprivate.h  uilanginfo.cpp  uilanginfo.h
src/HelperLibrary/FileBasedProject/: FileBasedProject.cpp  FileBasedProject.h  filebasedprojectp.cpp  filebasedprojectp.h
src/HelperLibrary/IGadget/: VariantMapHelper.cpp  VariantMapHelper.h  igadget.cpp  igadget.h
src/HelperLibrary/Json/: JsonStreamParser.cpp  JsonStreamParser.h  JsonUtils.cpp  JsonUtils.h
src/HelperLibrary/JsonProtocol/: datatransfer.cpp  datatransfer.h  jsonmessage.cpp  jsonmessage.h  jsonprotocolhelper.cpp  jsonprotocolhelper.h
src/HelperLibrary/LanguageHelper/: LanguageCombo.cpp  LanguageCombo.h  languagehelper.cpp  languagehelper.h
src/HelperLibrary/Logger/: abstractappender.cpp  abstractappender.h  consoleappender.cpp  consoleappender.h  fileappender.cpp  fileappender.h  htmltemplate.html  logger.cpp  logger.h  loggerhelper.cpp  loggerhelper.h  loggermacro.h  loggersettings.cpp  loggersettings.h  loggertemplate.qrc
src/HelperLibrary/Logger/FileRotation/: filerotation.cpp  filerotation.h
src/HelperLibrary/MultiPart/: multipartfile.cpp  multipartfile.h  multipartparser.cpp  multipartparser.h
src/HelperLibrary/PluginHelper/: abstractplugin.h  baseplugincreatormanager.cpp  baseplugincreatormanager.h  basepluginmanager.cpp  basepluginmanager.h  iplugincreator.cpp  iplugincreator.h  plugininfoview.cpp  plugininfoview.h  plugininfoview.ui  pluginliststate.cpp  pluginliststate.h  preloadplugininfo.cpp  preloadplugininfo.h
src/HelperLibrary/PluginHelper/priv/: plugindetails.cpp  plugindetails.h  (+1 more)
src/HelperLibrary/Resources/: rcc.h  resourcecompilier.cpp  resourcecompilier.h  resourceexplorer.cpp  resourceexplorer.h  resourceexplorer.ui  resourceexplorerdialog.cpp  resourceexplorerdialog.h  resourceexplorerdialog.ui
src/HelperLibrary/Security/: ISecurityPlugin.cpp  ISecurityPlugin.h  SecurityList.cpp  SecurityList.h  SecurityPluginManager.cpp  SecurityPluginManager.h
src/HelperLibrary/Serialization/: converfuncimpl.cpp  converfuncimpl.h  iconverter.cpp  iconverter.h  iserializebase.h  serialization.pri  serializeconfig.cpp  serializeconfig.h  serializer.cpp  serializer.h  serializerexception.cpp  serializerexception.h  serpropertyinfo.cpp  serpropertyinfo.h
src/HelperLibrary/Styles/: iconsenum.cpp  iconsenum.h  stylefilewatcher.cpp  stylefilewatcher.h
src/HelperLibrary/Widgets/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  dialogwrapper.cpp  dialogwrapper.h  dialogwrapper.ui  extendeddialog.cpp  extendeddialog.h  extendedmainwindow.cpp  extendedmainwindow.h  extendedwidget.cpp  extendedwidget.h  flowlayout.cpp  flowlayout.h  imagelistwidget.cpp  imagelistwidget.h  imagewidget.cpp  imagewidget.h  independentwidgetholder.cpp  independentwidgetholder.h  infowindow.cpp  infowindow.h  isavewidget.cpp  isavewidget.h  keyboardlayoutviewer.cpp  keyboardlayoutviewer.h  layoutsaver.cpp  layoutsaver.h  makepasswordform.cpp  makepasswordform.h  makepasswordform.ui  myprogressdialog.cpp  myprogressdialog.h  progressdialog.cpp  progressdialog.h  progressdialog.ui  showiconsform.cpp  showiconsform.h  showiconsform.ui  singlewidget.cpp  (+10 more)
src/HelperLibrary/Win/: ProcessInfo.cpp  ProcessInfo.h  bringtofront.cpp  bringtofront.h  handleptr.cpp  handleptr.h  icmpprovider.cpp  icmpprovider.h  processinfomonitor.cpp  processinfomonitor.h  processinfomonitor.ui  registry.cpp  registry.h  serviceinfo.cpp  serviceinfo.h  servicelist.cpp  servicelist.h  shellhelper.cpp  shellhelper.h  winapihelper.cpp  winapihelper.h  winapiqt.cpp  winapiqt.h
src/HelperLibrary/ZipManager/: ZipManager.pri  gzipwrapper.cpp  gzipwrapper.h  qzip.cpp  zipreader.h  zipwriter.h
src/HelperLibrary/pdf/: PdfExporter.cpp  PdfExporter.h
src/HelperLibrary/priv/: ComplexTextEditorPlugin.cpp  ComplexTextEditorPlugin.h  ExtListPlugin.cpp  ExtListPlugin.h  FiltertWidgetPlugin.cpp  FiltertWidgetPlugin.h  LanguageComboPlugin.cpp  LanguageComboPlugin.h  PresetListPlugin.cpp  PresetListPlugin.h  VariantMapEditorPlugin.cpp  VariantMapEditorPlugin.h  plugincollection.cpp  plugincollection.h  presetcontrollerplugin.cpp  presetcontrollerplugin.h  searchlineeditplugin.cpp  searchlineeditplugin.h
src/HelperLibrary/translate/: HelperLibrary_uk.qm  HelperLibrary_uk.ts  helperLibrary_en.qm  helperLibrary_en.ts  helperLibrary_es.qm  helperLibrary_es.ts  helperLibrary_ru.qm  helperLibrary_ru.ts  translate.cmd
src/HelperLibrary/zlib/: CMakeLists.txt  adler32.c  crc32.c  deflate.c  gzlib.c  gzread.c  gzwrite.c  zlib.pri
src/HelperLibraryUnitTest/: CMakeLists.txt  TestEnv.cpp  TestEnv.h  main.cpp  project_pch.cpp  project_pch.h  testutils.h
src/HelperLibraryUnitTest/lib/: TestConverterFunctions.cpp  TestConverterFunctions.h  TestSimpleTextFilter.cpp  TestSimpleTextFilter.h
src/HelperLibraryUnitTest/models/: ByteArrayWrapper.cpp  ByteArrayWrapper.h  myclass.cpp  myclass.h  testobject.cpp  testobject.h
(+90 files in other folders)
